<resources>
    <string name="app_name">Canteen App</string>
    <string name="nav_family">Family</string>
    <string name="nav_menu">Menu</string>
    <string name="nav_order">Order</string>
    <string name="nav_settings">Settings</string>
    <string name="login_placeholder">Логин</string>
    <string name="password_placeholder">Пароль</string>
    <string name="school_placeholder">Школа</string>
    <string name="logout_button_text">Выйти</string>
    <string name="role_text_placeholder">role</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>