<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_family">

    <fragment
        android:id="@+id/navigation_family"
        android:name="com.example.canteenapp.ui.family.FamilyFragment"
        android:label="@string/nav_family"
        tools:layout="@layout/fragment_menu">
        <action
            android:id="@+id/action_navigation_family_to_allDishesListFragment"
            app:destination="@id/allDishesListFragment" />
        <action
            android:id="@+id/action_navigation_family_to_navigation_order"
            app:destination="@id/navigation_order"
            app:popUpToSaveState="true"
            android:launchMode="singleTop"
            app:popUpTo="@id/navigation_family"
            />
        <action
            android:id="@+id/action_navigation_family_to_adminPanel"
            app:destination="@id/adminPanel"
            />
        <action
            android:id="@+id/action_navigation_family_to_myRequestsFragment"
            app:destination="@id/myRequestsFragment" />

    </fragment>

    <fragment
        android:id="@+id/navigation_order"
        android:name="com.example.canteenapp.ui.order.OrderFragment"
        android:label="@string/nav_order"
        tools:layout="@layout/fragment_order">
        <action
            android:id="@+id/action_navigation_order_to_navigation_menu"
            app:destination="@id/navigation_menu" />
        <action
            android:id="@+id/action_navigation_order_to_menuSecondaryFragment"
            app:destination="@id/menuSecondaryFragment" />
        <action
            android:id="@+id/action_navigation_order_to_menuDrinksFragment"
            app:destination="@id/menuDrinksFragment"/>
    </fragment>
    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.canteenapp.ui.settings.SettingsFragment"
        android:label="@string/nav_settings"
        tools:layout="@layout/fragment_settings">
        <action
            android:id="@+id/action_navigation_settings_to_addDishFragment"
            app:destination="@id/addDishFragment" />
    </fragment>
    <fragment
        android:id="@+id/addDishFragment"
        android:name="com.example.canteenapp.ui.settings.adddish.AddDishFragment"
        android:label="fragment_add_dish"
        tools:layout="@layout/fragment_add_dish">
        <action
            android:id="@+id/action_addDishFragment_to_navigation_settings"
            app:destination="@id/navigation_settings" />
    </fragment>
    <fragment
        android:id="@+id/allDishesListFragment"
        android:name="com.example.canteenapp.ui.canteen.all_dishes_list.AllDishesListFragment"
        android:label="fragment_all_dishes_list"
        tools:layout="@layout/fragment_all_dishes_list">
        <action
            android:id="@+id/action_allDishesListFragment_to_addDishFragment"
            app:destination="@id/addDishFragment" />
        <action
            android:id="@+id/action_allDishesListFragment_to_editDishFragment"
            app:destination="@id/editDishFragment" />
    </fragment>
    <fragment
        android:id="@+id/editDishFragment"
        android:name="com.example.canteenapp.ui.canteen.edit_dish.EditDishFragment"
        android:label="fragment_edit_dish"
        tools:layout="@layout/fragment_edit_dish">
        <action
            android:id="@+id/action_editDishFragment_to_allDishesListFragment"
            app:destination="@id/allDishesListFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_menu"
        android:name="com.example.canteenapp.ui.menu.MenuFragment"
        android:label="@string/nav_menu"
        tools:layout="@layout/fragment_family">
        <action
            android:id="@+id/action_navigation_menu_to_menuSecondaryFragment"
            app:destination="@id/menuSecondaryFragment"
            app:popUpTo="@id/navigation_menu"
            app:popUpToInclusive="true"
            app:popUpToSaveState="true"
            />
    </fragment>
    <fragment
        android:id="@+id/menuSecondaryFragment"
        android:name="com.example.canteenapp.ui.menu.secondary.MenuSecondaryFragment"
        android:label="fragment_menu_secondary"
        tools:layout="@layout/fragment_menu_secondary">
        <action
            android:id="@+id/action_menuSecondaryFragment_to_menuDrinksFragment"
            app:destination="@id/menuDrinksFragment"
            app:popUpTo="@id/menuSecondaryFragment"
            app:popUpToInclusive="true"
            app:popUpToSaveState="true"
            />
        <action
            android:id="@+id/action_menuSecondaryFragment_to_navigation_menu"
            app:destination="@id/navigation_menu"
            app:popUpTo="@id/menuSecondaryFragment"
            app:popUpToInclusive="true"
            app:popUpToSaveState="true"
            />
    </fragment>
    <fragment
        android:id="@+id/menuDrinksFragment"
        android:name="com.example.canteenapp.ui.menu.drinks.MenuDrinksFragment"
        android:label="fragment_menu_drinks"
        app:route="drinks"
        tools:layout="@layout/fragment_menu_drinks">
        <action
            android:id="@+id/action_menuDrinksFragment_to_menuSecondaryFragment"
            app:destination="@id/menuSecondaryFragment"
            app:popUpTo="@id/menuDrinksFragment"
            app:popUpToSaveState="true"
            />
        <action
            android:id="@+id/action_menuDrinksFragment_to_navigation_order"
            app:destination="@id/navigation_order"
            app:popUpTo="@id/navigation_family"
            app:popUpToSaveState="true" />
    </fragment>

    <fragment
        android:id="@+id/allRequestsFragment"
        android:name="com.example.canteenapp.ui.canteen.requests.RequestsFragment"
        android:label="fragment_requests"
        tools:layout="@layout/fragment_all_requests"
        >
    </fragment>

    <action
        android:id="@+id/goToAllDishes"
        app:destination="@id/allDishesListFragment"
        app:popUpTo="@id/navigation_family"
        app:popUpToSaveState="true"
        />

    <action
        android:id="@+id/goToRequests"
        app:destination="@id/allRequestsFragment"
        app:popUpTo="@id/navigation_family"
        app:popUpToSaveState="true"
        />

    <action
        android:id="@+id/goToOrder"
        app:destination="@id/navigation_order"
        app:popUpTo="@id/navigation_family"
        app:popUpToSaveState="true"
        android:launchMode="singleTop"
        />
    <navigation android:id="@+id/adminPanel"
        app:startDestination="@id/adminPanelFragment">
        <fragment
            android:id="@+id/adminPanelFragment"
            android:name="com.example.canteenapp.ui.admin.AdminPanelFragment"
            android:label="AdminPanelFragment"
            tools:layout="@layout/fragment_admin_panel">
            <action
                android:id="@+id/action_adminPanelFragment_to_schoolSettingsFragment"
                app:destination="@id/schoolSettingsFragment" />
        </fragment>
        <fragment
            android:id="@+id/classes_fragment"
            android:name="com.example.canteenapp.ui.admin.classes.ClassesFragment"
            android:label="ClassesFragment"
            tools:layout="@layout/fragment_classes" />
        <fragment
            android:id="@+id/schoolSettingsFragment"
            android:name="com.example.canteenapp.ui.admin.school_settings.SchoolSettingsFragment"
            android:label="SchoolSettingsFragment"
            tools:layout="@layout/fragment_school_settings">
            <action
                android:id="@+id/action_schoolSettingsFragment_to_classes_fragment"
                app:destination="@id/classes_fragment" />
        </fragment>
    </navigation>

    <action
        android:id="@+id/toAdminPanel"
        app:destination="@id/adminPanel"
        app:popUpTo="@id/navigation_family"
        app:popUpToSaveState="false"
        />

    <action
        android:id="@+id/toAllDishes"
        app:destination="@id/allDishesListFragment"
        app:popUpTo="@id/navigation_family"
        app:popUpToSaveState="false"
        />
    <fragment
        android:id="@+id/classRequestsFragment"
        android:name="com.example.canteenapp.ui.teacher.class_requests.ClassRequestsFragment"
        android:label="ClassRequestsFragment"
        tools:layout="@layout/fragment_class_requests"
        />

    <action
        android:id="@+id/toClassRequests"
        app:destination="@id/classRequestsFragment"
        app:popUpTo="@id/navigation_family"
        app:popUpToSaveState="false"
        />
    <fragment
        android:id="@+id/myRequestsFragment"
        android:name="com.example.canteenapp.ui.family.my_requests.MyRequestsFragment"
        android:label="fragment_my_requests"
        tools:layout="@layout/fragment_my_requests" />

</navigation>