<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:gravity="center"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="44dp"

        android:layout_marginStart="44dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="395dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.55">

        <TextView
            android:id="@+id/login_hello"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:fontFamily="@font/inter_semibold"
            android:text="Вход в аккаунт"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="38sp"
            />


        <EditText
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_edittext"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:drawablePadding="8dp"
            android:hint="@string/login_placeholder"
            android:inputType="text"
            android:paddingStart="8sp"
            android:paddingTop="12sp"
            android:paddingEnd="24sp"
            android:paddingBottom="12sp"
            android:textColor="@color/dark_main"
            android:textCursorDrawable="@null"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:background="@drawable/custom_edittext"
            android:drawableStart="@drawable/ic_baseline_password_24"
            android:drawablePadding="8dp"
            android:hint="@string/password_placeholder"
            android:inputType="textPassword"
            android:paddingStart="8sp"
            android:paddingTop="12sp"
            android:paddingEnd="24sp"
            android:paddingBottom="12sp"
            android:textColor="@color/dark_main"
            android:textCursorDrawable="@null"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/school"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@drawable/custom_edittext"
            android:drawableStart="@drawable/ic_baseline_school_24"
            android:drawableEnd="@drawable/ic_round_keyboard_arrow_down_24"
            android:drawablePadding="8dp"
            android:hint="@string/school_placeholder"
            android:inputType="textAutoComplete"
            android:paddingStart="8sp"
            android:paddingTop="12sp"
            android:paddingEnd="24sp"
            android:paddingBottom="12sp"
            android:textColor="@color/dark_main"
            android:textCursorDrawable="@null"
            android:textSize="20sp"
            android:visibility="visible" />


        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="48dp"
            android:backgroundTint="@color/beige_main"
            android:fontFamily="@font/inter_medium"
            android:text="Войти"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/dark_main"
            android:textSize="22sp"
            android:typeface="normal"
            app:cornerRadius="8dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="96dp"
            >

            <androidx.cardview.widget.CardView
                android:id="@+id/hint_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha=".8"
                android:backgroundTint="#1A1A1A"
                app:cardCornerRadius="16dp"
                android:windowIsTranslucent="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_light"
                    android:paddingHorizontal="12dp"
                    android:paddingVertical="8dp"
                    android:text="Войдите с помощью данных, полученных от преподавателя или администрации школы."
                    android:textAlignment="center"
                    android:textColor="#1A1A1A"
                    android:textSize="17sp" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_light"
                android:paddingHorizontal="12dp"
                android:paddingVertical="8dp"
                android:text="Войдите с помощью данных, полученных от преподавателя или администрации школы."
                android:textAlignment="center"
                android:textColor="@color/beige_main"
                android:textSize="17sp"
                android:translationZ="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>